feat(plugin comments facebook): :sparkles: plugin box coment

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,13 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- plugin coments Facefook -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v15.0" nonce="ojvF4gI5"></script>
   </body>
 </html>
