style(Styles): :sparkles: styles and responsive  components(Card , filter, pagination and shop)
styles and responsive  components(Card , filter, pagination and shop)

--- a/client/index.html
+++ b/client/index.html
@@ -42,8 +42,8 @@
 
   <!-- plugin coments Facefook -->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v15.0"
-    nonce="ojvF4gI5"></script>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v15.0" nonce="wp5WgjZp"></script>
+
 </body>
 
 </html>
