--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
       rel="stylesheet"
     />
 
-    <title>Vite + React + TS</title>
+    <title>SmartNest</title>
   </head>
 
   <body>
@@ -51,7 +51,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&display=swap" rel="stylesheet">
 
-  <title>Vite + React + TS</title>
+  <title>SmartNest</title>
 </head>
 
 <body>
