--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,8 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/smart-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://sdk.mercadopago.com/js/v2"></script>
     <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
